# acer-predator-turbo-and-rgb-keyboard-linux-module

./: .all-contributorsrc  .gitignore  .keyboard_cache  Makefile  README.md  dkms.conf  dsdt.aml  facer_rgb.py  git-push.sh  hexrgb.sh  install.sh  install_openrc.sh  install_service.sh  keyboard.py  main.py  push.sh  result-dev  service.sh  uninstall_service.sh
.github/ISSUE_TEMPLATE/: issue-template.md  title.md
.github/workflows/: codeql-analysis.yml
ArchLinux-bin-pkg/: PKGBUILD  acer-predator-turbo-rgb-git.install  makepkg.sh
PKGBUILD/: .SRCINFO  PKGBUILD  Predator-Sense-systemd-git.install  makepkg.sh
acer-wmi-module/: README.md  install.sh  refresh.sh  uninstall.sh
keybrgbCtrl/: Cargo.toml  Makefile
keybrgbCtrl/src/: handlers.rs  hexrgb.rs  main.rs  mods.rs  payload.rs  static_payload.rs  ws.rs
keybrgbCtrl/src/mods/: handlers.rs  hexrgb.rs  last_mode.rs  payload.rs  static_payload.rs  ws.rs
nitro_keybrgb/: README.md  pubspec.yaml
nitro_keybrgb/android/app/: build.gradle
nitro_keybrgb/ios/Runner/: Info.plist
nitro_keybrgb/ios/Runner.xcodeproj/: project.pbxproj
nitro_keybrgb/lib/: main.dart
nitro_keybrgb/linux/: CMakeLists.txt  my_application.cc
nitro_keybrgb/web/: index.html  manifest.json
nitro_keybrgb_pc/: README.md  pubspec.yaml
nitro_keybrgb_pc/android/app/: build.gradle
nitro_keybrgb_pc/ios/Runner/: Info.plist
nitro_keybrgb_pc/ios/Runner.xcodeproj/: project.pbxproj
nitro_keybrgb_pc/lib/: main.dart
nitro_keybrgb_pc/linux/: CMakeLists.txt  my_application.cc
nitro_keybrgb_pc/web/: index.html  manifest.json
src/: facer.c
(+6 files in other folders)
