[package]
name = "keybrgbctl"
authors = [ "Amy <axtlos@tar.black>" ]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
tokio = { version= "1", features = ["full"] }
tokio-stream = "0.1.6"
warp = "0.3"
serde = "*"
serde_derive = "*"
toml = "0.5"
serde_json = "1.0"
futures = { version = "0.3", default-features=false}
uuid = { version = "0.4", features = ["serde", "v4"] }
